--- a/landing.html
+++ b/landing.html
@@ -13,12 +13,12 @@
     <input type="text" id="namefield" placeholder="Enter the name of the task">
     <br>
     <label>Estimated time to complete (in minutes):</label>
-    <input type="text" id="timefield" placeholder="Enter your estimated time">
+    <input type="number" id="timefield" placeholder="Enter your estimated time">
     <button id="addbutton">Add!</button>
     <div id="schedule">
         <table>
             <tbody id = "InnerSchedule">
-                <th>
+                <th id="schedtitle">
                     Your calendar so far
                 </th>
                 <tr>
@@ -38,9 +38,10 @@
     <label>I need to finish these tasks in</label>
     <input type="number" id="reqtimefield" placeholder="Enter your estimated time (in minutes)">
     <label>minutes</label>
-    <div class="superbutton">
-        <h4 align="center">Manage my workload!</h4>
-    </div>
+    <br>
+    <br>
+    <button id="superbutton">Manage my workload!</button>
+    <br>
     <script src="script.js"></script>
 </body>
 </html>
